--- a/apps/app/public/locales/en-GB/common.json
+++ b/apps/app/public/locales/en-GB/common.json
@@ -197,7 +197,7 @@
     "search_placeholder": "Search for dashboards",
     "section1_title": "Most Popular Dashboards",
     "section1_description": "Explore popular dashboards",
-    "section2_title": "Recommended for you",
+    "section2_title": "All dashboards",
     "index_filters": {
       "sex": "Sex",
       "ethnicity": "Ethnicity",
