--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "description": "Translations for datagovmy.",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "*"
+  }
 }
