test: build ignore

--- a/packages/i18n/locales/en-GB/common.json
+++ b/packages/i18n/locales/en-GB/common.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "name": "data.gov.my",
+    "name": "hello 123",
     "description": "Your one-stop interface to browse Malaysia's wealth of open data. If data is the new oil, then openness is the pipeline that maximises its value."
   },
   "error": {
