--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -129,7 +129,8 @@
     "theme": "Tema",
     "light": "Terang",
     "dark": "Gelap",
-    "brought_by": "Dibawakan kepada anda oleh",
+    "brought_by": "Produk digital oleh",
+    "brought_by_the": "Produk digital oleh",
     "visit_portal": "Layari portal kami",
     "click_to_explore": "Click to explore",
     "ovs": "Lahir di Luar Negara"
