fix: hardcoded text on homepage

--- a/public/locales/en-GB/common.json
+++ b/public/locales/en-GB/common.json
@@ -185,9 +185,9 @@
       "total": "Total"
     },
     "keys": {
-      "users": "Daily Users",
+      "users": "Daily OpenAPI Usage",
       "views": "Daily Views",
-      "downloads": "Daily Data Downloads"
+      "downloads": "Daily Downloads"
     }
   },
   "dashboard": {
