--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -151,7 +151,7 @@
     "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
     "section_1": {
       "title": "Terokailah papan pemuka paling popular!",
-      "description": "Papan pemuka inilah yang paling menular, tetapi kandung penuh lama ini luas sekali! Jangan lupa untuk lihat [/dashboards](koleksi penuh papan pemuka) kami!",
+      "description": "Papan pemuka inilah yang paling menular, tetapi kandung penuh lama ini luas sekali! Jangan lupa untuk lihat [koleksi penuh papan pemuka](/dashboards) kami!",
       "stats": {
         "population": "Penduduk Semasa",
         "economic_growth": "Pertumbuhan Ekonomi",
@@ -165,7 +165,7 @@
     },
     "section_2": {
       "title": "Lihat dataset paling hangat!",
-      "description": "Sekiranya ada ingin membuat carian yang terperinci, layarilah [/data-catalogue](katalog data) kami yang membekalkan data daripada seluruh agensi kerajaan Malaysia!",
+      "description": "Sekiranya ada ingin membuat carian yang terperinci, layarilah [katalog data](/data-catalogue) kami yang membekalkan data daripada seluruh agensi kerajaan Malaysia!",
       "today": "Hari ini",
       "past_24h": "24 jam",
       "past_month": "1 bulan",
