feat: integrate Election Candidates API

--- a/apps/app/public/locales/en-GB/dashboard-election-explorer.json
+++ b/apps/app/public/locales/en-GB/dashboard-election-explorer.json
@@ -6,18 +6,18 @@
     "parties": "Political Parties",
     "seats": "Seats",
     "full_result": "Full result",
-    "popular_searches": "Popular searches today ",
     "parliament_elections": "Parliamentary Elections",
     "state_elections": "State Elections",
-    "candidate_name": "Candidate name",
+    "election_name": "Election Name",
+    "candidate_name": "Candidate Name",
     "party_name": "Party",
-    "total_votes": "Total votes",
+    "total_votes": "Total Votes",
     "perc_votes": "% of votes",
     "date": "Date",
     "constituency": "Constituency",
-    "seats_won": "Seats won",
-    "votes_won": "Votes won",
-    "perc_votes_won": "% of votes won",
+    "seats_won": "Seats Won",
+    "votes_won": "Votes Won",
+    "perc_votes_won": "% of Votes Won",
     "result": "Result",
     "winning_party": "Winning Party",
     "majority": "Majority",
