--- a/apps/app/public/locales/ms-MY/dashboard-election-explorer.json
+++ b/apps/app/public/locales/ms-MY/dashboard-election-explorer.json
@@ -6,18 +6,18 @@
     "parties": "Parti Politik",
     "seats": "Kerusi",
     "full_result": "Keputusan penuh",
-    "popular_searches": "Carian popular hari ini ",
     "parliament_elections": "Pilihan Raya Umum",
     "state_elections": "Pilihan Raya Negeri",
-    "candidate_name": "Nama calon",
+    "election_name": "Pilihan Raya",
+    "candidate_name": "Nama Calon",
     "party_name": "Parti",
-    "total_votes": "Jumlah undi",
+    "total_votes": "Jumlah Undi",
     "perc_votes": "% undi",
     "date": "Tarikh",
     "constituency": "Kawasan",
-    "seats_won": "Kerusi dimenang",
-    "votes_won": "Undi didapati",
-    "perc_votes_won": "% undi dimenang",
+    "seats_won": "Kerusi Dimenang",
+    "votes_won": "Undi Didapati",
+    "perc_votes_won": "% Undi Dimenang",
     "result": "Keputusan",
     "winning_party": "Parti Menang",
     "majority": "Majoriti",
