fix: i18n, null & d.p, get candidates client side

--- a/apps/app/public/locales/en-GB/dashboard-election-explorer.json
+++ b/apps/app/public/locales/en-GB/dashboard-election-explorer.json
@@ -8,7 +8,7 @@
     "full_result": "Full result",
     "parliament_elections": "Parliamentary Elections",
     "state_elections": "State Elections",
-    "election_name": "Election Name",
+    "election_name": "Election",
     "candidate_name": "Candidate Name",
     "party_name": "Party",
     "total_votes": "Total Votes",
