feat: integrate Parties and Seats API

--- a/apps/app/public/locales/en-GB/dashboard-election-explorer.json
+++ b/apps/app/public/locales/en-GB/dashboard-election-explorer.json
@@ -12,12 +12,10 @@
     "candidate_name": "Candidate Name",
     "party_name": "Party",
     "total_votes": "Total Votes",
-    "perc_votes": "% of votes",
     "date": "Date",
     "constituency": "Constituency",
     "seats_won": "Seats Won",
     "votes_won": "Votes Won",
-    "perc_votes_won": "% of Votes Won",
     "result": "Result",
     "winning_party": "Winning Party",
     "majority": "Majority",
@@ -50,8 +48,8 @@
         "header": "Explore the electoral history of anyone who’s ever competed in an election",
         "search_candidate": "Search for candidate's name",
         "title": "Complete electoral history for ",
-        "never_compete_state": "{{ name }} has never competed in State elections",
-        "never_compete_parliament": "{{ name }} has never competed in Parliament elections",
+        "no_data_dun": "{{ name }} has never competed in State elections",
+        "no_data_parliament": "{{ name }} has never competed in Parliament elections",
         "won": "Won",
         "won_uncontested": "Won Uncontested",
         "lost": "Lost",
@@ -61,15 +59,44 @@
         "header": "Explore any party’s entire electoral history",
         "search_party": "Search for political party name",
         "title": "<strong>{{ party }}’s electoral history</strong> in ",
+        "no_data_dun": "{{ party }} has never competed in {{ state }} State elections",
+        "no_data_dun_mys": "Please select a state; DUN-level results cannot be summarised at national level.",
+        "no_data_parliament": "{{ party }} has never competed in Parliament elections",
         "formed_gov": "Formed the Government",
         "formed_opp": "Formed the Opposition"
     },
     "seat": {
         "header": "Explore the entire electoral history for your area",
-        "search_seat": "Search for a seat (eg. P.051 Bayan Baru)",
+        "search_seat": "Search for a seat (eg. Bayan Baru)",
         "uncontested": "Uncontested",
         "close": "Close contest",
         "comfortable": "Comfortable win"
     },
-    "": ""
+    "party_names": [
+    {"alliance": "Alliance Party (PP)"},
+    {"amanah": "Parti Amanah Negara (AMANAH)"},
+    {"bebas": "Independent (BEBAS)"},
+    {"bersatu": "Parti Pribumi Bersatu Malaysia (BERSATU)"},
+    {"bn": "National Front (BN)"},
+    {"dap": "Democratic Action Party (DAP)"},
+    {"gerakan": "Parti Gerakan Rakyat Malaysia (GERAKAN)"},
+    {"gps": "Gabungan Parti Sarawak (GPS)"},
+    {"grs": "Gabungan Rakyat Sabah (GRS)"},
+    {"kdm": "Parti Kesejahteraan Demokratik Masyarakat (KDM)"},
+    {"mca": "Malaysian Chinese Association (MCA)"},
+    {"muda": "Malaysian United Democratic Alliance (MUDA)"},
+    {"pas": "Parti Islam Se-Malaysia (PAS)"},
+    {"pbm": "Parti Bangsa Malaysia (PBM)"},
+    {"pcs": "Love Sabah Party (PCS)"},
+    {"pejuang": "Parti Pejuang Tanah Air (PEJUANG)"},
+    {"ph": "Hope Alliance (PH)"},
+    {"phrs": "Parti Harapan Rakyat Sabah (PHRS)"},
+    {"pkr": "Parti Keadilan Rakyat (PKR)"},
+    {"pn": "National Alliance (PN)"},
+    {"psb": "Parti Sarawak Bersatu (PSB)"},
+    {"umno": "United Malays National Organisation (UMNO)"},
+    {"upko": "Pertubuhan Kinabalu Progresif Bersatu (UPKO)"},
+    {"warisan": "Parti Warisan Sabah (WARISAN)"},
+    {"": "()"}
+]
 }
