--- a/apps/app/public/locales/ms-MY/dashboard-election-explorer.json
+++ b/apps/app/public/locales/ms-MY/dashboard-election-explorer.json
@@ -12,12 +12,10 @@
     "candidate_name": "Nama Calon",
     "party_name": "Parti",
     "total_votes": "Jumlah Undi",
-    "perc_votes": "% undi",
     "date": "Tarikh",
     "constituency": "Kawasan",
     "seats_won": "Kerusi Dimenang",
     "votes_won": "Undi Didapati",
-    "perc_votes_won": "% Undi Dimenang",
     "result": "Keputusan",
     "winning_party": "Parti Menang",
     "majority": "Majoriti",
@@ -50,8 +48,8 @@
         "header": "Terokailah sejarah pilihan raya penuh bagi calon yang pernah bertanding dalam pilihan raya",
         "search_candidate": "Carilah nama calon",
         "title": "Keputusan penuh bagi calon ",
-        "never_compete_state": "{{ name }} tidak pernah bertanding di Pilihan Raya Negeri",
-        "never_compete_parliament": "{{ name }} tidak pernah bertanding di Pilihan Raya Umum",
+        "no_data_dun": "{{ name }} tidak pernah bertanding di Pilihan Raya Negeri",
+        "no_data_parliament": "{{ name }} tidak pernah bertanding di Pilihan Raya Umum",
         "won": "Menang",
         "won_uncontested": "Menang Tanpa Bertanding",
         "lost": "Kalah",
@@ -61,15 +59,42 @@
         "header": "Terokailah sejarah pilihan raya penuh parti politik",
         "search_party": "Carilah nama parti politik",
         "title": "<strong>{{ party }}: Sejarah penuh</strong> di",
+        "no_data_dun": "{{ party }} tidak pernah bertanding di Pilihan Raya Negeri {{ state }}",
+        "no_data_dun_mys": "Silih pilih negeri",
+        "no_data_parliament": "{{ party }} tidak pernah bertanding di Pilihan Raya Umum",
         "formed_gov": "Menjadi Kerajaan",
         "formed_opp": "Menjadi Pembangkang"
     },
     "seat": {
         "header": "Terokailah sejarah pilihan raya penuh bagi kawasan anda",
-        "search_seat": "Carilah kerusi (eg. P.051 Bayan Baru)",
+        "search_seat": "Carilah kerusi (eg. Bayan Baru)",
         "uncontested": "Tidak ditandingi",
         "close": "Persaingan sengit",
         "comfortable": "Menang selesa"
     },
+    "alliance": "Parti Perikatan (PP)",
+    "amanah": "Parti Amanah Negara (AMANAH)",
+    "bebas": "Bebas (BEBAS)",
+    "bersatu": "Parti Pribumi Bersatu Malaysia (BERSATU)",
+    "bn": "Barisan Nasional (BN)",
+    "dap": "Parti Tindakan Demokratik (DAP)",
+    "gerakan": "Parti Gerakan Rakyat Malaysia (GERAKAN)",
+    "gps": "Gabungan Parti Sarawak (GPS)",
+    "grs": "Gabungan Rakyat Sabah (GRS)",
+    "kdm": "Parti Kesejahteraan Demokratik Masyarakat (KDM)",
+    "mca": "Malaysian Chinese Association (MCA)",
+    "muda": "Malaysian United Democratic Alliance (MUDA)",
+    "pas": "Parti Islam Se-Malaysia (PAS)",
+    "pbm": "Parti Bangsa Malaysia (PBM)",
+    "pcs": "Parti Cinta Sabah (PCS)",
+    "pejuang": "Parti Pejuang Tanah Air (PEJUANG)",
+    "ph": "Pakatan Harapan (PH)",
+    "phrs": "Parti Harapan Rakyat Sabah (PHRS)",
+    "pkr": "Parti Keadilan Rakyat (PKR)",
+    "pn": "Perikatan Nasional (PN)",
+    "psb": "Parti Sarawak Bersatu (PSB)",
+    "umno": "United Malays National Organisation (UMNO)",
+    "upko": "Pertubuhan Kinabalu Progresif Bersatu (UPKO)",
+    "warisan": "Parti Warisan Sabah (WARISAN)",
     "": ""
 }
