--- a/packages/i18n/locales/en-GB/dashboard-election-explorer.json
+++ b/packages/i18n/locales/en-GB/dashboard-election-explorer.json
@@ -1,4 +1,100 @@
 {
   "header": "Election Explorer",
-  "description": ""
+  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.",
+  "elections": "Elections",
+  "candidates": "Candidates",
+  "parties": "Political Parties",
+  "seats": "Seats",
+  "full_result": "Full result",
+  "parliament_elections": "Parliamentary Elections",
+  "state_elections": "State Elections",
+  "election_name": "Election",
+  "candidate_name": "Candidate Name",
+  "party_name": "Party",
+  "total_votes": "Total Votes",
+  "date": "Date",
+  "constituency": "Constituency",
+  "seats_won": "Seats Won",
+  "votes_won": "Votes Won",
+  "result": "Result",
+  "winning_party": "Winning Party",
+  "majority": "Majority",
+  "election": {
+      "section_1": "Explore any election from Merdeka to the present!",
+      "parliament": "Parliament",
+      "state": "State",
+      "election": "Election",
+      "election_year": "Election year",
+      "apply_filters": "Apply filter",
+      "parliament_of": "Parliament of ",
+      "summary": "Summary",
+      "map": "Map",
+      "table": "Table",
+      "majority": "112 seats (50%) Simple majority",
+      "explore": "This page is designed to help you explore the results for a particular election, such as the 15th General Election in 2022. \nIf you wish to explore the full history for a particular candidate or party, visit our Party and Candidate Explorer instead!",
+      "section_2": "View the full ballot for a specific seat",
+      "full_result": "{{ election }}: Full result for ",
+      "search_area": "Search for your area",
+      "section_3": "Election analysis",
+      "choro_header": "How do {{ stat }} rates differ across the country?",
+      "choro_rank": "Ranking",
+      "voter_turnout": "Voter Turnout",
+      "majority_%": "Majority (%)", 
+      "rejected_votes": "Rejected votes", 
+      "%_PH": "% PH", 
+      "num_voters": "Number of voters"
+  },
+  "candidate": {
+      "header": "Explore the electoral history of anyone who’s ever competed in an election",
+      "search_candidate": "Search for candidate's name",
+      "title": "Complete electoral history for ",
+      "no_data_dun": "{{ name }} has never competed in State elections",
+      "no_data_parliament": "{{ name }} has never competed in Parliament elections",
+      "won": "Won",
+      "won_uncontested": "Won Uncontested",
+      "lost": "Lost",
+      "lost_deposit": "Lost Deposit"
+  },
+  "party": {
+      "header": "Explore any party’s entire electoral history",
+      "search_party": "Search for political party name",
+      "title": "<strong>{{ party }}’s electoral history</strong> in ",
+      "no_data_dun": "{{ party }} has never competed in {{ state }} State elections",
+      "no_data_dun_mys": "Please select a state; DUN-level results cannot be summarised at national level.",
+      "no_data_parliament": "{{ party }} has never competed in Parliament elections",
+      "formed_gov": "Formed the Government",
+      "formed_opp": "Formed the Opposition"
+  },
+  "seat": {
+      "header": "Explore the entire electoral history for your area",
+      "search_seat": "Search for a seat (eg. Bayan Baru)",
+      "uncontested": "Uncontested",
+      "close": "Close contest",
+      "comfortable": "Comfortable win"
+  },
+  "AMANAH": "Parti Amanah Negara (AMANAH)",
+  "BEBAS": "Independent (BEBAS)",
+  "BERSATU": "Parti Pribumi Bersatu Malaysia (BERSATU)",
+  "BN": "National Front (BN)",
+  "DAP": "Democratic Action Party (DAP)",
+  "GERAKAN": "Parti Gerakan Rakyat Malaysia (GERAKAN)",
+  "GPS": "Gabungan Parti Sarawak (GPS)",
+  "GRS": "Gabungan Rakyat Sabah (GRS)",
+  "KDM": "Parti Kesejahteraan Demokratik Masyarakat (KDM)",
+  "MCA": "Malaysian Chinese Association (MCA)",
+  "MUDA": "Malaysian United Democratic Alliance (MUDA)",
+  "PAS": "Parti Islam Se-Malaysia (PAS)",
+  "PBM": "Parti Bangsa Malaysia (PBM)",
+  "PCS": "Love Sabah Party (PCS)",
+  "PEJUANG": "Parti Pejuang Tanah Air (PEJUANG)",
+  "PERIKATAN": "Alliance Party (PP)",
+  "PH": "Hope Alliance (PH)",
+  "PHRS": "Parti Harapan Rakyat Sabah (PHRS)",
+  "PKR": "Parti Keadilan Rakyat (PKR)",
+  "PN": "National Alliance (PN)",
+  "PSB": "Parti Sarawak Bersatu (PSB)",
+  "UMNO": "United Malays National Organisation (UMNO)",
+  "UPKO": "Pertubuhan Kinabalu Progresif Bersatu (UPKO)",
+  "WARISAN": "Parti Warisan Sabah (WARISAN)",
+  "": "()"
 }
