--- a/packages/i18n/locales/ms-MY/dashboard-election-explorer.json
+++ b/packages/i18n/locales/ms-MY/dashboard-election-explorer.json
@@ -1,4 +1,100 @@
 {
-  "header": "",
-  "description": ""
+  "header": "Peneroka Pilihan Raya",
+  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.",
+  "elections": "Pilihan Raya",
+  "candidates": "Calon",
+  "parties": "Parti Politik",
+  "seats": "Kerusi",
+  "full_result": "Keputusan penuh",
+  "parliament_elections": "Pilihan Raya Umum",
+  "state_elections": "Pilihan Raya Negeri",
+  "election_name": "Pilihan Raya",
+  "candidate_name": "Nama Calon",
+  "party_name": "Parti",
+  "total_votes": "Jumlah Undi",
+  "date": "Tarikh",
+  "constituency": "Kawasan",
+  "seats_won": "Kerusi Dimenang",
+  "votes_won": "Undi Didapati",
+  "result": "Keputusan",
+  "winning_party": "Parti Menang",
+  "majority": "Majoriti",
+  "election": {
+      "section_1": "Terokailah data pilihan raya dari Merdeka sehingga kini!",
+      "parliament": "Parlimen",
+      "state": "Negeri",
+      "election": "Pilihan raya",
+      "election_year": "Tahun pilihan raya",
+      "apply_filters": "Tapiskan",
+      "parliament_of": "Parlimen ",
+      "summary": "Rumusan",
+      "map": "Peta",
+      "table": "Jadual",
+      "majority": "112 kerusi (50%) Majoriti mudah",
+      "explore": "Bahagian ini digunakan untuk menerokai keputusan pilihan raya seperti Pilihan Raya Umum ke-15 pada tahun 2022. \nSekiranya anda ingin menerokai sejarah penuh seseorang calon ataupun sebuah parti, sila pergi ke bahagian Calon atau Parti Politik",
+      "section_2": "Lihat keputusan penuh bagi kerusi tertentu",
+      "search_area": "Carilah kawasan anda",
+      "full_result": "{{ election }}: Keputusan penuh bagi ",
+      "section_3": "Analisa pilihan raya",
+      "choro_header": "Bagaimanakan kadar {{ stat }} berbeza di seluruh negara?",
+      "choro_rank": "Kedudukan",
+      "voter_turnout": "Keluar Mengundi",
+      "majority_%": "Majoriti (%)",
+      "rejected_votes": "Undi ditolak",
+      "%_PH": "% PH",
+      "num_voters": "Jumlah pengundi"
+  },
+  "candidate": {
+      "header": "Terokailah sejarah pilihan raya penuh bagi calon yang pernah bertanding dalam pilihan raya",
+      "search_candidate": "Carilah nama calon",
+      "title": "Keputusan penuh bagi calon ",
+      "no_data_dun": "{{ name }} tidak pernah bertanding di Pilihan Raya Negeri",
+      "no_data_parliament": "{{ name }} tidak pernah bertanding di Pilihan Raya Umum",
+      "won": "Menang",
+      "won_uncontested": "Menang Tanpa Bertanding",
+      "lost": "Kalah",
+      "lost_deposit": "Hilang Deposit"
+  },
+  "party": {
+      "header": "Terokailah sejarah pilihan raya penuh parti politik",
+      "search_party": "Carilah nama parti politik",
+      "title": "<strong>{{ party }}: Sejarah penuh</strong> di",
+      "no_data_dun": "{{ party }} tidak pernah bertanding di Pilihan Raya Negeri {{ state }}",
+      "no_data_dun_mys": "Silih pilih negeri",
+      "no_data_parliament": "{{ party }} tidak pernah bertanding di Pilihan Raya Umum",
+      "formed_gov": "Menjadi Kerajaan",
+      "formed_opp": "Menjadi Pembangkang"
+  },
+  "seat": {
+      "header": "Terokailah sejarah pilihan raya penuh bagi kawasan anda",
+      "search_seat": "Carilah kerusi (eg. Bayan Baru)",
+      "uncontested": "Tidak ditandingi",
+      "close": "Persaingan sengit",
+      "comfortable": "Menang selesa"
+  },
+  "AMANAH": "Parti Amanah Negara (AMANAH)",
+  "BEBAS": "Bebas (BEBAS)",
+  "BERSATU": "Parti Pribumi Bersatu Malaysia (BERSATU)",
+  "BN": "Barisan Nasional (BN)",
+  "DAP": "Parti Tindakan Demokratik (DAP)",
+  "GERAKAN": "Parti Gerakan Rakyat Malaysia (GERAKAN)",
+  "GPS": "Gabungan Parti Sarawak (GPS)",
+  "GRS": "Gabungan Rakyat Sabah (GRS)",
+  "KDM": "Parti Kesejahteraan Demokratik Masyarakat (KDM)",
+  "MCA": "Malaysian Chinese Association (MCA)",
+  "MUDA": "Malaysian United Democratic Alliance (MUDA)",
+  "PAS": "Parti Islam Se-Malaysia (PAS)",
+  "PBM": "Parti Bangsa Malaysia (PBM)",
+  "PCS": "Parti Cinta Sabah (PCS)",
+  "PEJUANG": "Parti Pejuang Tanah Air (PEJUANG)",
+  "PERIKATAN": "Parti Perikatan (PP)",
+  "PH": "Pakatan Harapan (PH)",
+  "PHRS": "Parti Harapan Rakyat Sabah (PHRS)",
+  "PKR": "Parti Keadilan Rakyat (PKR)",
+  "PN": "Perikatan Nasional (PN)",
+  "PSB": "Parti Sarawak Bersatu (PSB)",
+  "UMNO": "United Malays National Organisation (UMNO)",
+  "UPKO": "Pertubuhan Kinabalu Progresif Bersatu (UPKO)",
+  "WARISAN": "Parti Warisan Sabah (WARISAN)",
+  "": ""
 }
