fix: update orphan status english translations

--- a/packages/i18n/locales/en-GB/dashboard-sekolahku.json
+++ b/packages/i18n/locales/en-GB/dashboard-sekolahku.json
@@ -32,8 +32,8 @@
     },
     "orphan": {
       "title": "Orphan Status",
-      "no": "",
-      "yes": ""
+      "no": "Non-Orphan",
+      "yes": "Orphan"
     },
     "religion": {
       "title": "Religion",
