chore: add party images and names

--- a/packages/i18n/locales/ms-MY/dashboard-election-explorer.json
+++ b/packages/i18n/locales/ms-MY/dashboard-election-explorer.json
@@ -72,19 +72,36 @@
       "close": "Persaingan sengit",
       "comfortable": "Menang selesa"
   },
+  "AKAR": "Angkatan Keadilan Rakyat (AKAR)",
+  "AKIM": "Angkatan Keadilan Insan Malaysia (AKIM)",
   "AMANAH": "Parti Amanah Negara (AMANAH)",
-  "BEBAS": "Bebas (BEBAS)",
+  "ANAKNEGERI": "Parti Kerjasama Anak Negeri (ANAKNEGERI)",
+  "BEBAS": "Independent",
+  "BERJASA": "Barisan Jemaah Islamiah Se-Malaysia (BERJASA)",
+  "BERJAYA": "Parti Bersatu Rakyat Jelata Sabah (BERJAYA)",
+  "BERSAMA": "Parti Bersatu Rakyat Malaysia (BERSAMA)",
   "BERSATU": "Parti Pribumi Bersatu Malaysia (BERSATU)",
+  "BERSEKUTU": "Barisan Rakyat Sabah Bersekutu (BERSEKUTU)",
   "BN": "Barisan Nasional (BN)",
-  "DAP": "Parti Tindakan Demokratik (DAP)",
+  "DAP": "Democratic Action Party (DAP)",
   "GERAKAN": "Parti Gerakan Rakyat Malaysia (GERAKAN)",
   "GPS": "Gabungan Parti Sarawak (GPS)",
+  "GRM": "Parti Gerakan Rakyat Malaysia (GRM)",
   "GRS": "Gabungan Rakyat Sabah (GRS)",
+  "HR": "Parti Harapan Rakyat Sabah (HR)",
   "KDM": "Parti Kesejahteraan Demokratik Masyarakat (KDM)",
+  "KITA": "Parti Kesejahteraan Insan Tanah Air (KITA)",
+  "LABOUR": "Labour Party (LABOUR)",
+  "LDP": "Liberal Democratic Party (LDP)",
   "MCA": "Malaysian Chinese Association (MCA)",
+  "MIC": "Malaysian Indian Congress (MIC)",
+  "MOMOGUN": "Parti Momogun Kebangsaan Sabah (MOMOGUN)",
+  "MU": "Malaysian United Party (MU)",
   "MUDA": "Malaysian United Democratic Alliance (MUDA)",
+  "NEG": "Parti Negara (NEG)",
   "PAS": "Parti Islam Se-Malaysia (PAS)",
   "PBM": "Parti Bangsa Malaysia (PBM)",
+  "PBS": "Parti Bersatu Sabah (PBS)",
   "PCS": "Parti Cinta Sabah (PCS)",
   "PEJUANG": "Parti Pejuang Tanah Air (PEJUANG)",
   "PERIKATAN": "Parti Perikatan (PP)",
@@ -93,8 +110,12 @@
   "PKR": "Parti Keadilan Rakyat (PKR)",
   "PN": "Perikatan Nasional (PN)",
   "PSB": "Parti Sarawak Bersatu (PSB)",
+  "SAPP": "Sabah Progressive Party (SAPP)",
+  "STAR": "Parti Solidariti Tanah Airku (STAR)",
+  "SUPP": "Sarawak United Peoples' Party (SUPP)",
   "UMNO": "United Malays National Organisation (UMNO)",
-  "UPKO": "Pertubuhan Kinabalu Progresif Bersatu (UPKO)",
+  "UPKO": "United Progressive Kinabalu Organisation (UPKO)",
+  "USNO": "United Sabah National Organisation (USNO)",
   "WARISAN": "Parti Warisan Sabah (WARISAN)",
   "": ""
 }
