--- a/apps/docs/pages/overview/quickstart.en.mdx
+++ b/apps/docs/pages/overview/quickstart.en.mdx
@@ -1,15 +1,13 @@
-# Quicktart Guide
-
 ## Before you start
 
-The Open API is flexible and can be used both with and without an API key. To ensure responsible usage and prevent abuse, there are limits on the number of requests users can make.
+The Open API is flexible and can be used both with and without an API token. To ensure responsible usage and prevent abuse, there are limits on the number of requests users can make.
 
 For new users, we recommend starting without authentication as it simplifies the initial learning process.
-However, if you find yourself needing more functionality beyond the limitations of unauthenticated access, you have the option to [generate an API key](/overview/authentication).
+However, if you find yourself needing more functionality beyond the limitations of unauthenticated access, you have the option to [request for an API token](/overview/authentication).
 
 ## Postman Collection
 
-We highly recommend starting your exploration of the OpenAPI by interacting with our Postman collection.
+We recommend starting your exploration of the OpenAPI by interacting with our Postman collection.
 The collection provides an interactive environment where you can send requests and receive real-time responses.
 It offers comprehensive examples of all available endpoints, allowing you to experiment, replicate requests, and customize them to meet your specific needs.
 
