--- a/apps/docs/pages/static-api/data-catalogue/response-format.ms.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/response-format.ms.mdx
@@ -1,4 +1,4 @@
-# Data Catalogue
+# Format Respons
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iusto quam natus eum molestias
 impedit, magnam error harum quos vitae illum quidem, quod modi doloremque iste adipisci nam corrupti
